force-app/main/default/objects/TentativaAlternativa__c/TentativaAlternativa__c.object-meta.xml
<CustomObject>
    <label>Tentativa de Alternativa</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tentativas de Alternativa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>