force-app/main/default/objects/TentativaAlternativa__c/fields/AlternativaQuestao__c.field-meta.xml
<CustomField>
    <fullName>AlternativaQuestao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Alternativa da Questão</label>
    <referenceTo>AlternativaQuestao__c</referenceTo>
    <relationshipLabel>Tentativas</relationshipLabel>
    <relationshipName>Tentativas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>