force-app/main/default/objects/TentativaAlternativa__c/fields/CorretaNoMomento__c.field-meta.xml
<CustomField>
    <fullName>CorretaNoMomento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correta no Momento</label>
    <type>Checkbox</type>
</CustomField>