force-app/main/default/objects/TentativaAlternativa__c/fields/Selecionada__c.field-meta.xml
<CustomField>
    <fullName>Selecionada__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Selecionada</label>
    <type>Checkbox</type>
</CustomField>