force-app/main/default/objects/TentativaAlternativa__c/fields/TentativaQuestao__c.field-meta.xml
<CustomField>
    <fullName>TentativaQuestao__c</fullName>
    <label>Tentativa de Questão</label>
    <referenceTo>TentativaQuestao__c</referenceTo>
    <relationshipLabel>Alternativas Respondidas</relationshipLabel>
    <relationshipName>AlternativasRespondidas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>